# pydantic-notes

./: .gitignore  README.md  pyproject.toml
pydantic_notes/Basics/: project.ipynb  pydantic_model.ipynb
pydantic_notes/Configuration/: project.ipynb  pydantic_config.ipynb
